Обновление проекта: новые файлы

--- a/fr1/templates/fr1/daily_temperatures.html
+++ b/fr1/templates/fr1/daily_temperatures.html
@@ -7,10 +7,10 @@
 <div class="mb-4 text-center">
     <form method="get" class="d-inline-flex align-items-center">
         <label for="start_date" class="me-2">From:</label>
-        <input type="date" name="start_date" value="{{ start_date|date:'Y-m-d' }}" class="form-control me-3">
+        <input type="date" name="start_date" value="{{ start_date|date:'Y-m-d' }}" class="form-control me-3" required>
 
         <label for="end_date" class="me-2">To:</label>
-        <input type="date" name="end_date" value="{{ end_date|date:'Y-m-d' }}" class="form-control me-3">
+        <input type="date" name="end_date" value="{{ end_date|date:'Y-m-d' }}" class="form-control me-3" required>
 
         <button type="submit" class="btn btn-success">Отфильтровать</button>
     </form>
@@ -33,7 +33,7 @@
             <td>{{ record.fridge.name }}</td>
             <td>{{ record.sensor1_temp }}°C</td>
             <td>{{ record.sensor2_temp }}°C</td>
-            <td>{{ record.event_date|date:"Y-m-d H:i" }}</td> <!-- Форматируем дату -->
+            <td>{{ record.event_date|date:"Y-m-d H:i" }}</td>
         </tr>
         {% empty %}
         <tr>
@@ -43,4 +43,34 @@
         </tbody>
     </table>
 </div>
+
+<!-- Пагинация -->
 {% endblock %}
+
+<!-- Скрипт для сохранения данных формы в localStorage -->
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        const startDateInput = document.querySelector('input[name="start_date"]');
+        const endDateInput = document.querySelector('input[name="end_date"]');
+
+        if (localStorage.getItem("start_date") !== null) {
+            startDateInput.value = localStorage.getItem("start_date");
+        }
+        if (localStorage.getItem("end_date") !== null) {
+            endDateInput.value = localStorage.getItem("end_date");
+        }
+
+        startDateInput.addEventListener("change", function() {
+            localStorage.setItem("start_date", startDateInput.value);
+        });
+
+        endDateInput.addEventListener("change", function() {
+            localStorage.setItem("end_date", endDateInput.value);
+        });
+
+        document.querySelector('form').addEventListener('submit', function() {
+            localStorage.setItem("start_date", startDateInput.value);
+            localStorage.setItem("end_date", endDateInput.value);
+        });
+    });
+</script>
