--- a/fr1/templates/fr1/daily_temperatures.html
+++ b/fr1/templates/fr1/daily_temperatures.html
@@ -25,9 +25,9 @@
         <tr>
             <th>Температура датчика 1 (°C)</th>
             <th>Температура датчика 2 (°C)</th>
-            <th>Вне диапазона</th>
+            {#<<th>Вне диапазона</th>#}
             <th>Время открытия двери (сек)</th>
-            <th>Потеря питания</th>
+            {#<<th>Потеря питания</th>#}
             <th>Влажность (%)</th>
             <th>Температура воздуха (°C)</th>
             <th>Дата события</th>
